--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <ul>
           <li class="header__nav__item"><a href="#">Documentation </a></li>
           <li class="header__nav__item">/</li>
-          <li class="header__nav__item"><a href="/uk"> Who's using</a></li>
+          <li class="header__nav__item">
+            <a href="./use.html"> Who's using</a>
+          </li>
         </ul>
       </nav>
       <div class="header__logo">
